project-quantum/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quantum
  labels:
    name: quantum
