project-quantum/k8s/grafana-setup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quantum-grafana
  namespace: quantum
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
          name: web
        volumeMounts:
        - name: storage-volume
          mountPath: /var/lib/grafana
      volumes:
      - name: storage-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: quantum-grafana-service
  namespace: quantum
spec:
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30092
    protocol: TCP
    name: web
  selector:
    app: grafana
  type: NodePort
